[gd_scene load_steps=8 format=3 uid="uid://bs1cs7i43kjyp"]

[ext_resource type="Script" uid="uid://bbl7flewcr2nc" path="res://scripts/core/transition_leaf.gd" id="1_fblsh"]
[ext_resource type="Texture2D" uid="uid://dculn5brjalkx" path="res://tempGraphics/leaf.png" id="1_uwo63"]

[sub_resource type="ViewportTexture" id="ViewportTexture_7or0q"]
viewport_path = NodePath("SubViewportContainer/SubViewport")

[sub_resource type="Animation" id="Animation_fblsh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SubViewportContainer/SubViewport/Node2D/Leaf:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-424.99997, -76)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SubViewportContainer/SubViewport/Node2D/Leaf2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(180, -1072)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SubViewportContainer/SubViewport/Node2D/Leaf3:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-962, 359)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SubViewportContainer/SubViewport/Node2D/Leaf4:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-75, 761)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SubViewportContainer/SubViewport/Node2D/Leaf5:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-390, 1078)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("SubViewportContainer/SubViewport/Node2D/Leaf6:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(388.00003, 944.99994)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("SubViewportContainer/SubViewport/Node2D/Leaf7:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-351, 345.00003)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("SubViewportContainer/SubViewport/Node2D/Leaf8:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1795, -510)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("SubViewportContainer/SubViewport/Node2D/Leaf9:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(966, -981.99994)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("SubViewportContainer/SubViewport/Node2D/Leaf10:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(498, -733)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("SubViewportContainer/SubViewport/Node2D/Leaf11:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(713, -374)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("SubViewportContainer/SubViewport/Node2D/Leaf12:position")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1463, 992)]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("SubViewportContainer/SubViewport/Node2D/Leaf13:position")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(802, 787.0001)]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("SubViewportContainer/SubViewport/Node2D/Leaf14:position")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1620, 222.99997)]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("SubViewportContainer/SubViewport/Node2D/Leaf15:position")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(382, 1453)]
}
tracks/15/type = "value"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("SubViewportContainer/SubViewport/Node2D/Leaf16:position")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(942.00006, 1384)]
}
tracks/16/type = "value"
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/path = NodePath("SubViewportContainer/SubViewport/Node2D/Leaf17:position")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2061, 369.99997)]
}
tracks/17/type = "value"
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/path = NodePath("SubViewportContainer/SubViewport/Node2D/Leaf18:position")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-676, -573)]
}

[sub_resource type="Animation" id="Animation_uwo63"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SubViewportContainer/SubViewport/Node2D/Leaf:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(236.00003, 114), Vector2(-424.99997, -76)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SubViewportContainer/SubViewport/Node2D/Leaf2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(222, -69), Vector2(180, -1072)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SubViewportContainer/SubViewport/Node2D/Leaf3:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-43, 249), Vector2(-962, 359)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SubViewportContainer/SubViewport/Node2D/Leaf4:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(138, 309), Vector2(-75, 761)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SubViewportContainer/SubViewport/Node2D/Leaf5:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-14, 440), Vector2(-390, 1078)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("SubViewportContainer/SubViewport/Node2D/Leaf6:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(232, 464), Vector2(388.00003, 944.99994)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("SubViewportContainer/SubViewport/Node2D/Leaf7:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(378, 276.99997), Vector2(-351, 345.00003)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("SubViewportContainer/SubViewport/Node2D/Leaf8:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(914, -8.9999695), Vector2(1795, -510)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("SubViewportContainer/SubViewport/Node2D/Leaf9:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(704, -52), Vector2(966, -981.99994)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("SubViewportContainer/SubViewport/Node2D/Leaf10:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(445, -46), Vector2(498, -733)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("SubViewportContainer/SubViewport/Node2D/Leaf11:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(550, 120.000015), Vector2(713, -374)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("SubViewportContainer/SubViewport/Node2D/Leaf12:position")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(920, 445), Vector2(1463, 992)]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("SubViewportContainer/SubViewport/Node2D/Leaf13:position")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(597, 350), Vector2(802, 787.0001)]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("SubViewportContainer/SubViewport/Node2D/Leaf14:position")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(788, 208), Vector2(1620, 222.99997)]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("SubViewportContainer/SubViewport/Node2D/Leaf15:position")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(465.99988, 473), Vector2(382, 1453)]
}
tracks/15/type = "value"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("SubViewportContainer/SubViewport/Node2D/Leaf16:position")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(729, 450), Vector2(942.00006, 1384)]
}
tracks/16/type = "value"
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/path = NodePath("SubViewportContainer/SubViewport/Node2D/Leaf17:position")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(975, 222), Vector2(2061, 369.99997)]
}
tracks/17/type = "value"
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/path = NodePath("SubViewportContainer/SubViewport/Node2D/Leaf18:position")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-676, -573)]
}

[sub_resource type="Animation" id="Animation_hwd3u"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SubViewportContainer/SubViewport/Node2D/Leaf:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(236.00003, 114), Vector2(-424.99997, -76)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SubViewportContainer/SubViewport/Node2D/Leaf2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(222, -69), Vector2(180, -1072)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SubViewportContainer/SubViewport/Node2D/Leaf3:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-43, 249), Vector2(-962, 359)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SubViewportContainer/SubViewport/Node2D/Leaf4:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(138, 309), Vector2(-75, 761)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SubViewportContainer/SubViewport/Node2D/Leaf5:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-14, 440), Vector2(-390, 1078)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("SubViewportContainer/SubViewport/Node2D/Leaf6:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(232, 464), Vector2(388.00003, 944.99994)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("SubViewportContainer/SubViewport/Node2D/Leaf7:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(378, 276.99997), Vector2(-351, 345.00003)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("SubViewportContainer/SubViewport/Node2D/Leaf8:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(914, -8.9999695), Vector2(1795, -510)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("SubViewportContainer/SubViewport/Node2D/Leaf9:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(704, -52), Vector2(966, -981.99994)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("SubViewportContainer/SubViewport/Node2D/Leaf10:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(445, -46), Vector2(498, -733)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("SubViewportContainer/SubViewport/Node2D/Leaf11:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(550, 120.000015), Vector2(713, -374)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("SubViewportContainer/SubViewport/Node2D/Leaf12:position")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(920, 445), Vector2(1463, 992)]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("SubViewportContainer/SubViewport/Node2D/Leaf13:position")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(597, 350), Vector2(802, 787.0001)]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("SubViewportContainer/SubViewport/Node2D/Leaf14:position")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(788, 208), Vector2(1620, 222.99997)]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("SubViewportContainer/SubViewport/Node2D/Leaf15:position")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(465.99988, 473), Vector2(382, 1453)]
}
tracks/15/type = "value"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("SubViewportContainer/SubViewport/Node2D/Leaf16:position")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(729, 450), Vector2(942.00006, 1384)]
}
tracks/16/type = "value"
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/path = NodePath("SubViewportContainer/SubViewport/Node2D/Leaf17:position")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(975, 222), Vector2(2061, 369.99997)]
}
tracks/17/type = "value"
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/path = NodePath("SubViewportContainer/SubViewport/Node2D/Leaf18:position")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-676, -573)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_36iy3"]
_data = {
&"RESET": SubResource("Animation_fblsh"),
&"fade_in": SubResource("Animation_uwo63"),
&"fade_out": SubResource("Animation_hwd3u")
}

[node name="CanvasLayer" type="CanvasLayer" node_paths=PackedStringArray("anim_player", "timer")]
script = ExtResource("1_fblsh")
anim_player = NodePath("SubViewportContainer/SubViewport/AnimationPlayer")
timer = NodePath("SubViewportContainer/SubViewport/TimerHold")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = SubResource("ViewportTexture_7or0q")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
offset_left = -7376.0
offset_top = 984.0
offset_right = -6224.0
offset_bottom = 1632.0

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
transparent_bg = true
size = Vector2i(1152, 648)

[node name="AnimationPlayer" type="AnimationPlayer" parent="SubViewportContainer/SubViewport"]
root_node = NodePath("../../..")
libraries = {
&"": SubResource("AnimationLibrary_36iy3")
}

[node name="Node2D" type="Node2D" parent="SubViewportContainer/SubViewport"]
position = Vector2(125, 125)

[node name="Leaf" type="Sprite2D" parent="SubViewportContainer/SubViewport/Node2D"]
position = Vector2(-424.99997, -76)
rotation = 0.7425468
texture = ExtResource("1_uwo63")

[node name="Leaf2" type="Sprite2D" parent="SubViewportContainer/SubViewport/Node2D"]
position = Vector2(180, -1072)
rotation = -0.6354262
texture = ExtResource("1_uwo63")

[node name="Leaf3" type="Sprite2D" parent="SubViewportContainer/SubViewport/Node2D"]
position = Vector2(-962, 359)
rotation = 1.3408046
texture = ExtResource("1_uwo63")

[node name="Leaf4" type="Sprite2D" parent="SubViewportContainer/SubViewport/Node2D"]
position = Vector2(-75, 761)
rotation = 0.13260603
texture = ExtResource("1_uwo63")

[node name="Leaf5" type="Sprite2D" parent="SubViewportContainer/SubViewport/Node2D"]
position = Vector2(-390, 1078)
rotation = 0.13260603
texture = ExtResource("1_uwo63")

[node name="Leaf6" type="Sprite2D" parent="SubViewportContainer/SubViewport/Node2D"]
position = Vector2(388.00003, 944.99994)
rotation = -0.7014646
texture = ExtResource("1_uwo63")

[node name="Leaf7" type="Sprite2D" parent="SubViewportContainer/SubViewport/Node2D"]
position = Vector2(-351, 345.00003)
rotation = 0.021116434
texture = ExtResource("1_uwo63")

[node name="Leaf8" type="Sprite2D" parent="SubViewportContainer/SubViewport/Node2D"]
position = Vector2(1795, -510)
rotation = -1.9947948
texture = ExtResource("1_uwo63")

[node name="Leaf9" type="Sprite2D" parent="SubViewportContainer/SubViewport/Node2D"]
position = Vector2(966, -981.99994)
rotation = -0.7150639
texture = ExtResource("1_uwo63")

[node name="Leaf10" type="Sprite2D" parent="SubViewportContainer/SubViewport/Node2D"]
position = Vector2(498, -733)
rotation = -0.3540957
texture = ExtResource("1_uwo63")

[node name="Leaf11" type="Sprite2D" parent="SubViewportContainer/SubViewport/Node2D"]
position = Vector2(713, -374)
rotation = 0.10481435
texture = ExtResource("1_uwo63")

[node name="Leaf12" type="Sprite2D" parent="SubViewportContainer/SubViewport/Node2D"]
position = Vector2(1463, 992)
rotation = -1.1765742
texture = ExtResource("1_uwo63")

[node name="Leaf13" type="Sprite2D" parent="SubViewportContainer/SubViewport/Node2D"]
position = Vector2(802, 787.0001)
rotation = -0.25206733
scale = Vector2(0.99999994, 0.99999994)
texture = ExtResource("1_uwo63")

[node name="Leaf14" type="Sprite2D" parent="SubViewportContainer/SubViewport/Node2D"]
position = Vector2(1620, 222.99997)
rotation = 0.0978609
scale = Vector2(0.99999994, 0.99999994)
texture = ExtResource("1_uwo63")

[node name="Leaf15" type="Sprite2D" parent="SubViewportContainer/SubViewport/Node2D"]
position = Vector2(382, 1453)
rotation = -0.19409871
texture = ExtResource("1_uwo63")

[node name="Leaf16" type="Sprite2D" parent="SubViewportContainer/SubViewport/Node2D"]
position = Vector2(942.00006, 1384)
rotation = 0.15889832
texture = ExtResource("1_uwo63")

[node name="Leaf17" type="Sprite2D" parent="SubViewportContainer/SubViewport/Node2D"]
position = Vector2(2061, 369.99997)
rotation = -0.48024303
texture = ExtResource("1_uwo63")

[node name="Leaf18" type="Sprite2D" parent="SubViewportContainer/SubViewport/Node2D"]
position = Vector2(-676, -573)
texture = ExtResource("1_uwo63")

[node name="Control" type="Control" parent="SubViewportContainer/SubViewport"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Button" type="Button" parent="SubViewportContainer/SubViewport/Control"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "dag"

[node name="Button2" type="Button" parent="SubViewportContainer/SubViewport/Control"]
layout_mode = 0
offset_left = 78.0
offset_top = 21.0
offset_right = 115.0
offset_bottom = 52.0
text = "bag"

[node name="TimerHold" type="Timer" parent="SubViewportContainer/SubViewport"]
wait_time = 0.3
one_shot = true

[connection signal="animation_finished" from="SubViewportContainer/SubViewport/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="pressed" from="SubViewportContainer/SubViewport/Control/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="SubViewportContainer/SubViewport/Control/Button2" to="." method="_on_button_2_pressed"]
[connection signal="timeout" from="SubViewportContainer/SubViewport/TimerHold" to="." method="_on_timer_hold_timeout"]
